--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,12 @@
 			"sourceType": "module"
 		},
 		"rules": {
-			// "prettier/prettier": "error",
+			// "prettier/prettier": [
+			// 	"error",
+			// 	{
+			// 		"endOfLine": "auto"
+			// 	}
+			// ],
 			"camelcase": ["error"],
 			"eqeqeq": ["error", "always"]
 		}
