--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "card game",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --mode development --watch",
+    "build": "webpack",
+    "start": "webpack-dev-server --open",
     "format": "prettier —write .",
     "lint:js": "eslint ./src/**/*.js",
     "lint": "npm run lint:js",
@@ -20,12 +22,20 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.3",
+    "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^2.8.8",
     "stylelint-config-prettier": "^9.0.5",
-    "stylelint-prettier": "^3.0.0"
+    "stylelint-prettier": "^3.0.0",
+    "webpack": "^5.86.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
