--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,10 +4,12 @@
 			"es6": true,
 			"node": true
 		},
-		"extends": ["eslint:recommended", "prettier"],
+		"extends": ["eslint:recommended", "prettier", "plugin:@typescript-eslint/recommended"],
+		"parser": "@typescript-eslint/parser",
 		"plugins": [
-			"prettier"
+			"prettier", "@typescript-eslint"
 		],
+		"root": true,
 		"parserOptions": {
 			"ecmaVersion": 2020,
 			"sourceType": "module"
