--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "start": "webpack-dev-server --open",
     "format": "prettier —write .",
     "lint:js": "eslint ./src/**/*.js",
-    "lint": "npm run lint:js",
+    "lint": "npm run lint:ts",
     "prepare": "husky install",
-		"lint:ts": "tsc --noEmit"
+    "lint:ts": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -23,10 +23,12 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.0",
-    "eslint": "^8.42.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "html-webpack-plugin": "^5.5.3",
