--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "script.js",
   "scripts": {
     "dev": "webpack --mode development --watch",
+    "test": "jest",
     "build": "webpack",
     "start": "webpack-dev-server --open",
     "format": "prettier —write .",
@@ -23,8 +24,10 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.5",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
+    "babel-jest": "^29.5.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.0",
@@ -33,10 +36,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.3",
+    "jest": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^2.8.8",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-prettier": "^3.0.0",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "typescript": "^5.1.3",
     "webpack": "^5.86.0",
