--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "webpack-dev-server --open",
     "format": "prettier —write .",
     "lint:js": "eslint ./src/**/*.js",
-    "lint": "npm run lint:ts",
+		"lint:css": "stylelint ./src/**/*.css",
+    "lint": "npm run lint:ts && npm run lint:css",
     "prepare": "husky install",
     "lint:ts": "tsc --noEmit"
   },
@@ -39,7 +40,9 @@
     "jest": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^2.8.8",
+    "stylelint": "^15.5.0",
     "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-standard": "^33.0.0",
     "stylelint-prettier": "^3.0.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
